# git-cognition-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
docs/: 00-overview.md  01-architecture.md  09-errors.md  10-provider-runtime.md  11-repo-requests.md  12-provider-contracts.md  13-issue-requests.md  14-code-review-requests.md  15-release-requests.md  17-http-auth-middleware-runtime.md  18-repository-crud-hydration.md  19-collaboration-resource-hydration.md  20-provider-manager-facade.md  21-provider-conformance-suite.md  22-end-to-end-usage.md  23-unified-dev-adapter-coverage.md  24-local-git-cognition-reads.md
src/: lib.rs
src/bitbucket/: capabilities.rs  client.rs  code_reviews.rs  issues.rs  mappers.rs  mod.rs  pipelines.rs  provider_pipelines.rs  repos.rs  request_pagination.rs  response_fixture.rs
src/core/: helpers.rs
src/github/: capabilities.rs  client.rs  code_reviews.rs  issues.rs  mappers.rs  mod.rs  pagination.rs  pipelines.rs  provider_fluent.rs  provider_pipelines.rs  releases.rs  repos.rs  request_pagination.rs  response_fixture.rs
src/gitlab/: capabilities.rs  client.rs  code_reviews.rs  issues.rs  mappers.rs  mod.rs  pagination.rs  pipelines.rs  provider_collaboration.rs  provider_pipelines.rs  releases.rs  repos.rs  request_pagination.rs  response_fixture.rs
tests/: bitbucket.rs  core.rs  github.rs  gitlab.rs
tests/bitbucket/: auth_organizations.rs  code_review_requests.rs  collaboration_hydration.rs  conformance.rs  issue_hydration.rs  issue_requests.rs  manager_facade.rs  pagination_hydration.rs  provider.rs  (+6 more)
(+110 files in other folders)
